Updated intellij vmoptions