@@ -17,6 +17,7 @@
 -XX:+TieredCompilationUseG1GC
 -XX:SoftRefLRUPolicyMSPerMB=50
 -XX:+UnlockExperimentalVMOptions
+-Dsun.io.useCanonPrefixCache=false
 -Djava.net.preferIPv4Stack=true
 -Dsun.io.useCanonCaches=false
 -XX:LargePageSizeInBytes=256m
@@ -38,9 +39,13 @@
 -XX:+UnlockDiagnosticVMOptions
 -Djdk.http.auth.tunneling.disabledSchemes=""
 -XX:+HeapDumpOnOutOfMemoryError
--XX:+UseCompressedOops
 -XX:-OmitStackTraceInFastThrow
+-Djdk.attach.allowAttachSelf=true
+-Dkotlinx.coroutines.debug=off
+-Djdk.module.illegalAccess.silent=true
+-XX:+UseCompressedOops
 -Dfile.encoding=UTF-8
+-XX:CICompilerCount=2
 -Xverify:none
 
 -XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
